# octoai-solutions

./: .gitignore  LICENSE  README.md
ner/: README.md  env.sh.example  ner_solution.py  pyproject.toml  requirements.txt
ner/yaml_examples/: electronic_health_records.yaml  expense_management.yaml  financial_records.yaml  vegetation_management.yaml  website_analysis.yaml
transcription/: README.md  app.py  pyproject.toml  requirements.txt  utils.py
